100/Parser.output
   0  $accept : %entry% $end

   1  Prog : FunDecs EOF

   2  FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs
   3          |

   4  Type : INT

   5  Decs : Decs1 Dec
   6       |

   7  Decs1 : Decs1 Dec SEMICOLON
   8        |

   9  Dec : Type Sids

  10  Sid : ID

  11  Sids : Sid COMMA Sids
  12       | Sid

  13  Stat : Exp SEMICOLON
  14       | IF LPAR Exp RPAR Stat
  15       | IF LPAR Exp RPAR Stat ELSE Stat
  16       | RETURN Exp SEMICOLON

  17  Exp : NUM
  18      | Lval
  19      | Lval ASSIGN Exp
  20      | Exp PLUS Exp
  21      | Exp MINUS Exp
  22      | Exp LESS Exp
  23      | ID LPAR Exps RPAR
  24      | LPAR Exp RPAR

  25  Exps :
  26       | Exps1

  27  Exps1 : Exp
  28        | Exp COMMA Exps

  29  Lval : ID

  30  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (30)
	FunDecs : .  (3)

	INT  shift 3
	EOF  reduce 3

	Prog  goto 4
	FunDecs  goto 5
	Type  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Type : INT .  (4)

	.  reduce 4


state 4
	%entry% : '\001' Prog .  (30)

	.  reduce 30


state 5
	Prog : FunDecs . EOF  (1)

	EOF  shift 7
	.  error


state 6
	FunDecs : Type . Sid LPAR Decs RPAR Stat FunDecs  (2)

	ID  shift 8
	.  error

	Sid  goto 9


state 7
	Prog : FunDecs EOF .  (1)

	.  reduce 1


state 8
	Sid : ID .  (10)

	.  reduce 10


state 9
	FunDecs : Type Sid . LPAR Decs RPAR Stat FunDecs  (2)

	LPAR  shift 10
	.  error


state 10
	FunDecs : Type Sid LPAR . Decs RPAR Stat FunDecs  (2)
	Decs : .  (6)
	Decs1 : .  (8)

	INT  reduce 8
	RPAR  reduce 6

	Decs  goto 11
	Decs1  goto 12


state 11
	FunDecs : Type Sid LPAR Decs . RPAR Stat FunDecs  (2)

	RPAR  shift 13
	.  error


state 12
	Decs : Decs1 . Dec  (5)
	Decs1 : Decs1 . Dec SEMICOLON  (7)

	INT  shift 3
	.  error

	Type  goto 14
	Dec  goto 15


state 13
	FunDecs : Type Sid LPAR Decs RPAR . Stat FunDecs  (2)

	ID  shift 16
	IF  shift 17
	LPAR  shift 18
	NUM  shift 19
	RETURN  shift 20
	.  error

	Exp  goto 21
	Lval  goto 22
	Stat  goto 23


state 14
	Dec : Type . Sids  (9)

	ID  shift 8
	.  error

	Sid  goto 24
	Sids  goto 25


state 15
	Decs : Decs1 Dec .  (5)
	Decs1 : Decs1 Dec . SEMICOLON  (7)

	SEMICOLON  shift 26
	RPAR  reduce 5


state 16
	Exp : ID . LPAR Exps RPAR  (23)
	Lval : ID .  (29)

	LPAR  shift 27
	ASSIGN  reduce 29
	COMMA  reduce 29
	LESS  reduce 29
	MINUS  reduce 29
	PLUS  reduce 29
	RPAR  reduce 29
	SEMICOLON  reduce 29


state 17
	Stat : IF . LPAR Exp RPAR Stat  (14)
	Stat : IF . LPAR Exp RPAR Stat ELSE Stat  (15)

	LPAR  shift 28
	.  error


state 18
	Exp : LPAR . Exp RPAR  (24)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 29
	Lval  goto 22


state 19
	Exp : NUM .  (17)

	.  reduce 17


state 20
	Stat : RETURN . Exp SEMICOLON  (16)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 30
	Lval  goto 22


state 21
	Stat : Exp . SEMICOLON  (13)
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)

	LESS  shift 31
	MINUS  shift 32
	PLUS  shift 33
	SEMICOLON  shift 34
	.  error


state 22
	Exp : Lval .  (18)
	Exp : Lval . ASSIGN Exp  (19)

	ASSIGN  shift 35
	COMMA  reduce 18
	LESS  reduce 18
	MINUS  reduce 18
	PLUS  reduce 18
	RPAR  reduce 18
	SEMICOLON  reduce 18


state 23
	FunDecs : Type Sid LPAR Decs RPAR Stat . FunDecs  (2)
	FunDecs : .  (3)

	INT  shift 3
	EOF  reduce 3

	FunDecs  goto 36
	Type  goto 6


state 24
	Sids : Sid . COMMA Sids  (11)
	Sids : Sid .  (12)

	COMMA  shift 37
	RPAR  reduce 12
	SEMICOLON  reduce 12


state 25
	Dec : Type Sids .  (9)

	.  reduce 9


state 26
	Decs1 : Decs1 Dec SEMICOLON .  (7)

	.  reduce 7


state 27
	Exp : ID LPAR . Exps RPAR  (23)
	Exps : .  (25)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	RPAR  reduce 25

	Exp  goto 38
	Exps  goto 39
	Exps1  goto 40
	Lval  goto 22


state 28
	Stat : IF LPAR . Exp RPAR Stat  (14)
	Stat : IF LPAR . Exp RPAR Stat ELSE Stat  (15)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 41
	Lval  goto 22


state 29
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : LPAR Exp . RPAR  (24)

	LESS  shift 31
	MINUS  shift 32
	PLUS  shift 33
	RPAR  shift 42
	.  error


state 30
	Stat : RETURN Exp . SEMICOLON  (16)
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)

	LESS  shift 31
	MINUS  shift 32
	PLUS  shift 33
	SEMICOLON  shift 43
	.  error


state 31
	Exp : Exp LESS . Exp  (22)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 44
	Lval  goto 22


state 32
	Exp : Exp MINUS . Exp  (21)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 45
	Lval  goto 22


state 33
	Exp : Exp PLUS . Exp  (20)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 46
	Lval  goto 22


state 34
	Stat : Exp SEMICOLON .  (13)

	.  reduce 13


state 35
	Exp : Lval ASSIGN . Exp  (19)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	.  error

	Exp  goto 47
	Lval  goto 22


state 36
	FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs .  (2)

	.  reduce 2


state 37
	Sids : Sid COMMA . Sids  (11)

	ID  shift 8
	.  error

	Sid  goto 24
	Sids  goto 48


state 38
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exps1 : Exp .  (27)
	Exps1 : Exp . COMMA Exps  (28)

	COMMA  shift 49
	LESS  shift 31
	MINUS  shift 32
	PLUS  shift 33
	RPAR  reduce 27


state 39
	Exp : ID LPAR Exps . RPAR  (23)

	RPAR  shift 50
	.  error


state 40
	Exps : Exps1 .  (26)

	.  reduce 26


state 41
	Stat : IF LPAR Exp . RPAR Stat  (14)
	Stat : IF LPAR Exp . RPAR Stat ELSE Stat  (15)
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)

	LESS  shift 31
	MINUS  shift 32
	PLUS  shift 33
	RPAR  shift 51
	.  error


state 42
	Exp : LPAR Exp RPAR .  (24)

	.  reduce 24


state 43
	Stat : RETURN Exp SEMICOLON .  (16)

	.  reduce 16


state 44
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp LESS Exp .  (22)

	MINUS  shift 32
	PLUS  shift 33
	COMMA  reduce 22
	LESS  reduce 22
	RPAR  reduce 22
	SEMICOLON  reduce 22


state 45
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp MINUS Exp .  (21)
	Exp : Exp . LESS Exp  (22)

	COMMA  reduce 21
	LESS  reduce 21
	MINUS  reduce 21
	PLUS  reduce 21
	RPAR  reduce 21
	SEMICOLON  reduce 21


state 46
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp PLUS Exp .  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)

	COMMA  reduce 20
	LESS  reduce 20
	MINUS  reduce 20
	PLUS  reduce 20
	RPAR  reduce 20
	SEMICOLON  reduce 20


state 47
	Exp : Lval ASSIGN Exp .  (19)
	Exp : Exp . PLUS Exp  (20)
	Exp : Exp . MINUS Exp  (21)
	Exp : Exp . LESS Exp  (22)

	LESS  shift 31
	MINUS  shift 32
	PLUS  shift 33
	COMMA  reduce 19
	RPAR  reduce 19
	SEMICOLON  reduce 19


state 48
	Sids : Sid COMMA Sids .  (11)

	.  reduce 11


state 49
	Exps1 : Exp COMMA . Exps  (28)
	Exps : .  (25)

	ID  shift 16
	LPAR  shift 18
	NUM  shift 19
	RPAR  reduce 25

	Exp  goto 38
	Exps  goto 52
	Exps1  goto 40
	Lval  goto 22


state 50
	Exp : ID LPAR Exps RPAR .  (23)

	.  reduce 23


state 51
	Stat : IF LPAR Exp RPAR . Stat  (14)
	Stat : IF LPAR Exp RPAR . Stat ELSE Stat  (15)

	ID  shift 16
	IF  shift 17
	LPAR  shift 18
	NUM  shift 19
	RETURN  shift 20
	.  error

	Exp  goto 21
	Lval  goto 22
	Stat  goto 53


state 52
	Exps1 : Exp COMMA Exps .  (28)

	.  reduce 28


state 53
	Stat : IF LPAR Exp RPAR Stat .  (14)
	Stat : IF LPAR Exp RPAR Stat . ELSE Stat  (15)

	ELSE  shift 54
	EOF  reduce 14
	INT  reduce 14


state 54
	Stat : IF LPAR Exp RPAR Stat ELSE . Stat  (15)

	ID  shift 16
	IF  shift 17
	LPAR  shift 18
	NUM  shift 19
	RETURN  shift 20
	.  error

	Exp  goto 21
	Lval  goto 22
	Stat  goto 55


state 55
	Stat : IF LPAR Exp RPAR Stat ELSE Stat .  (15)

	.  reduce 15


22 terminals, 15 nonterminals
31 grammar rules, 56 states
